--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
